--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://kit.fontawesome.com/4619b49638.js"></script>
   </body>
 </html>
